# phd

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-letsberational-wheel-new.yml  build-letsberational-wheel.yml
data/test/: butterfly_arbitrage.csv  calendar_arbitrage.csv
examples/: calib_linear_equity.ipynb  calib_linear_equity.py
scripts/analysis/: linear_equity_eod.ipynb  make_ivs_ts.py
scripts/calibration/: cboe_ivs_calib.py  spx_ivs_1d.py  spx_ivs_calib.py
scripts/make_test_data/: bsm_quantlib.py  heston_prices_quantlib.py  heston_quantlib.py  synthetic_smiles_w_arbitrage.py
scripts/misc/: synthetic_smiles_w_arbitrage.py
scripts/run_calibration/: calib_linear_equity.py  calib_mixture_surface.py  cboe_ivs_example.py  plot_helper.py
src/vol_risk/: protocols.py
tests/data/: heston_prices_quantlib.csv  vanilla_opt.csv
tests/unit/: test_black76.py  test_heston.py  test_jaeckel.py
vol_risk/: protocols.py  util.py
vol_risk/calibration/: data_loaders.py  mixture_pipeline.py  option_chain.py  plot_helpers.py  transformers.py
vol_risk/calibration/data/: loaders.py  transformers.py
vol_risk/models/: black76.py  heston.py  linear.py
vol_risk/utils/: calendar.py
vol_risk/vol_surface/: moneyness.py  surface.py
vol_risk/vol_surface/interpl/: mixture.py
