[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["I"]
ignore = [
  "COM812",  # Trailing comma missing
  "ANN002",  # Missing type annotation for `*args`
  "D102",    # Missing docstring in public method
  "FBT001",  # Bolean type hint in positional argument
  "FBT002",  # Boolean default value positional argument
  "ANN204",  # missing-return-type-special-method
  "D105",    # undocumented-magic-method
  "RUF003",  # ambiguous-unicode-character-comment
  "PLR0913", # too-many-arguments
  "PT018",   # pytest-composite-assertion
  "N806",    # non-lowercase-variable-in-function
  "PD101",   # pandas-nunique-constant-series-check
  "PLR2004", # magic-value-comparison
  "ANN003",  # missing-type-kwargs
  "TD003",   # missing-todo-link
  "FIX002",  # line-contains-todo
  "N813",    # camelcase-imported-as-lowercase
  "PT009",   # pytest-unittest-assertion
  "INP001",  # implicit-namespace-package
  "TRY003",  # raise-vanilla-args

  ####  Temporary ####
  "D103",    # undocumented-public-function
  "D107",    # undocumented-public-init
  "ERA001",  # commented-out-code
  "D100",    # undocumented-public-module
  "F401",    # unused-import
]

# Exclude common directories
exclude = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["vol_risk"]

# BUILD-TIME: Tools to compile C++ and create the package
[build-system]
requires = [
  "setuptools>=80.0",  # Package builder
  "wheel",             # Wheel format support
  "cmake>=3.18",       # Compile C++ code
  "pybind11>=2.11.0",  # Generate Python bindings for C++
]
build-backend = "setuptools.build_meta"

[project]
name = "vol_risk"
version = "0.0.1"
description = "Volatility Risk for Risk Managers"
authors = [{ name = "Marco", email = "marco.colbacchini@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.3.4",
  "scipy>=1.15.3",
  "pandas>=2.3.3",
  "jax>=0.8.0",
  "matplotlib>=3.10.7",
  "pandera>=0.26.1",
]

[project.optional-dependencies]
dev = [
  "QuantLib==1.38",
  "matplotlib>=3.10.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vol_risk*"]
